--- a/package.json
+++ b/package.json
@@ -1,72 +1,86 @@
 {
-  "name": "time-series",
-  "widgetName": "TimeSeries",
-  "version": "1.0.0",
-  "description": "Time series chart",
-  "copyright": "Mendix BV",
-  "scripts": {
-    "pretest": "tsc",
-    "test": "karma start --single-run --codeCoverage && node tests/remap.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mendixlabs/time-series.git"
-  },
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/mendixlabs/time-series/issues"
-  },
-  "devDependencies": {
-    "@types/classnames": "0.0.32",
-    "@types/core-js": "0.9.36",
-    "@types/d3": "^3.5.36",
-    "@types/enzyme": "^2.7.4",
-    "@types/jasmine": "^2.5.41",
-    "@types/karma": "^0.13.33",
-    "@types/nvd3": "^1.8.32",
-    "@types/react": "^15.0.7",
-    "@types/react-dom": "^0.14.23",
-    "check-dependencies": "^1.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.3",
-    "enzyme": "^2.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "grunt": "1.0.1",
-    "grunt-check-dependencies": "^1.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-compress": "^1.4.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-newer": "^1.1.1",
-    "grunt-webpack": "^2.0.1",
-    "istanbul": "^0.4.3",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine": "^2.5.3",
-    "json-loader": "^0.5.4",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
-    "mendix-client": "git+https://github.com/FlockOfBirds/Mendix-client-typing.git",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "remap-istanbul": "^0.9.0",
-    "source-map-loader": "^0.2.0",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^2.0.1",
-    "tslint": "^4.5.1",
-    "tslint-eslint-rules": "^3.3.0",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.0"
-  },
-  "dependencies": {
-    "d3": "^3.4.4",
-    "nvd3": "^1.8.5"
-  }
+    "name": "time-series",
+    "widgetName": "TimeSeries",
+    "version": "1.0.0",
+    "description": "Time series chart",
+    "copyright": "Mendix BV",
+    "scripts": {
+        "pretest": "tsc",
+        "test": "karma start --single-run --codeCoverage && node tests/remap.js",
+        "build": "node ./node_modules/gulp/bin/gulp build",
+        "version": "node ./node_modules/gulp/bin/gulp version",
+        "icon": "node ./node_modules/gulp/bin/gulp icon",
+        "folders": "node ./node_modules/gulp/bin/gulp folders",
+        "modeler": "node ./node_modules/gulp/bin/gulp modeler"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mendixlabs/time-series.git"
+    },
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/mendixlabs/time-series/issues"
+    },
+    "devDependencies": {
+        "@types/classnames": "0.0.32",
+        "@types/core-js": "0.9.36",
+        "@types/d3": "^3.5.36",
+        "@types/enzyme": "^2.7.4",
+        "@types/jasmine": "^2.5.41",
+        "@types/karma": "^0.13.33",
+        "@types/nvd3": "^1.8.32",
+        "@types/react": "^15.0.7",
+        "@types/react-dom": "^0.14.23",
+        "check-dependencies": "^1.0.1",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.27.3",
+        "del": "^2.2.2",
+        "enzyme": "^2.7.1",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "gulp": "^3.9.1",
+        "gulp-if": "^2.0.1",
+        "gulp-intercept": "^0.1.0",
+        "gulp-json-transform": "^0.4.2",
+        "gulp-jsvalidate": "^3.0.0",
+        "gulp-sequence": "^0.4.6",
+        "gulp-util": "^3.0.8",
+        "gulp-zip": "^3.2.0",
+        "istanbul": "^0.4.3",
+        "istanbul-instrumenter-loader": "^2.0.0",
+        "jasmine": "^2.5.3",
+        "json-loader": "^0.5.4",
+        "karma": "^1.5.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-coverage": "^1.1.1",
+        "karma-jasmine": "^1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "karma-remap-istanbul": "^0.6.0",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^2.0.2",
+        "mendix-client": "git+https://github.com/FlockOfBirds/Mendix-client-typing.git",
+        "react": "^15.4.2",
+        "react-addons-test-utils": "^15.4.2",
+        "react-dom": "^15.4.2",
+        "remap-istanbul": "^0.9.0",
+        "shelljs": "^0.7.7",
+        "source-map-loader": "^0.2.0",
+        "style-loader": "^0.13.2",
+        "ts-loader": "^2.0.1",
+        "tslint": "^4.5.1",
+        "tslint-eslint-rules": "^3.3.0",
+        "typescript": "^2.2.1",
+        "webpack": "^2.2.1",
+        "webpack-dev-server": "^2.2.0",
+        "widgetbuilder-gulp-helper": "https://github.com/JelteMX/widgetbuilder-gulp-helper/archive/1.0.1.tar.gz",
+        "yargs": "^6.0.0"
+    },
+    "dependencies": {
+        "d3": "^3.4.4",
+        "nvd3": "^1.8.5"
+    },
+    "generatorVersion": "2.1.1",
+    "paths": {
+        "testProjectFolder": "./dist/MxTestProject/",
+        "testProjectFileName": "TreeviewDemo.mpr"
+    }
 }
